terraform/database.tf
resource "aws_db_subnet_group" "main" {
  name        = "${local.name_prefix}-db-subnet-group"
  description = "Subnets privadas para RDS"
  subnet_ids  = aws_subnet.private[*].id
  tags = merge(local.common_tags, {
    Name = "${local.name_prefix}-db-subnet-group"
  })
}

resource "aws_db_instance" "main" {
  identifier        = "${local.name_prefix}-rds"
  engine            = "mysql"
  engine_version    = var.db_engine_version
  instance_class    = var.db_instance_class
  allocated_storage = var.db_allocated_storage
  storage_type      = "gp3"
  storage_encrypted = true
  db_name           = var.db_name
  username          = var.db_username
  password          = var.db_password
  port              = 3306

  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  publicly_accessible    = false

  multi_az                     = false
  backup_retention_period      = 1
  skip_final_snapshot          = true
  deletion_protection          = false
  apply_immediately            = true
  auto_minor_version_upgrade   = true
  performance_insights_enabled = false

  tags = merge(local.common_tags, {
    Name = "${local.name_prefix}-rds-primary"
    Role = "primary"
  })

  lifecycle {
    ignore_changes = all
  }
}

resource "aws_db_instance" "replica" {
  count                  = var.create_read_replica ? 1 : 0
  identifier             = "${local.name_prefix}-rds-replica"
  instance_class         = var.db_instance_class
  replicate_source_db    = aws_db_instance.main.identifier
  publicly_accessible    = false
  vpc_security_group_ids = [aws_security_group.rds.id]
  skip_final_snapshot    = true
  apply_immediately      = true

  tags = merge(local.common_tags, {
    Name = "${local.name_prefix}-rds-replica"
    Role = "read-replica"
  })

  depends_on = [aws_db_instance.main]

  lifecycle {
    ignore_changes = all
  }
}
